namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-accredited-programmes-test/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-accredited-programmes-test
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "test"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "accredited-programme-team"
    cloud-platform.justice.gov.uk/application: "Accredited Programmes"
    cloud-platform.justice.gov.uk/owner: "Accredited Programmes: team-acp@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-accredited-programmes-ui,https://github.com/ministryofjustice/hmpps-accredited-programmes-api"
    cloud-platform.justice.gov.uk/team-name: "accredited-programmes-team"
